--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt": "~0.4.0rc7",
     "grunt-contrib-jshint": "~0.1.1rc6",
     "grunt-contrib-concat": "~0.1.2rc6",
-    "grunt-contrib-watch": "~0.2.0rc5"
+    "grunt-contrib-watch": "~0.2.0rc5",
+    "grunt-mocha": "git://github.com/kmiyashiro/grunt-mocha.git"
   }
 }
