--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-jshint": "~0.1.1rc6",
     "grunt-contrib-concat": "~0.1.2rc6",
     "grunt-contrib-watch": "~0.2.0rc5",
-    "grunt-mocha": "git://github.com/kmiyashiro/grunt-mocha.git"
+    "grunt-mocha": "git://github.com/kmiyashiro/grunt-mocha.git",
+    "grunt-lib-phantomjs": "~0.1.0"
   }
 }
