--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-concat": "~0.1.2rc6",
     "grunt-contrib-watch": "~0.2.0rc5",
     "grunt-mocha": "git://github.com/kmiyashiro/grunt-mocha.git",
-    "grunt-lib-phantomjs": "~0.1.0"
+    "grunt-lib-phantomjs": "~0.1.0",
+    "grunt-contrib-copy": "~0.4.0rc7"
   }
 }
