--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "Force.com-Metadata-Tool",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt": "0.4.0",
-    "grunt-contrib-jshint": "0.1.1",
-    "grunt-contrib-concat": "0.1.2",
-    "grunt-contrib-watch": "0.2.0",
-    "grunt-mocha": "0.2.2",
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-concat": "~0.2.0",
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-mocha": "~0.3.1",
     "grunt-lib-phantomjs": "0.1.0",
-    "grunt-contrib-copy": "0.4.0"
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
