--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-concat": "~0.2.0",
     "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.0",
     "grunt-mocha": "~0.3.1",
     "grunt-lib-phantomjs": "0.1.0",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-templater": "0.0.4",
+    "handlebars": "~1.0.10"
   }
 }
